--- a/Exercices/post-it/styles.css
+++ b/Exercices/post-it/styles.css
@@ -27,7 +27,7 @@ body {
     cursor: pointer;
 }
 .post-it {
-
+    position: relative;
     margin: 10px;
     background-color: #fff;
     width : 200px;
@@ -36,7 +36,15 @@ body {
     -webkit-box-shadow: 6px 6px 56px -17px rgba(0,0,0,0.75);
     -moz-box-shadow: 6px 6px 56px -17px rgba(0,0,0,0.75);
     box-shadow: 6px 6px 56px -17px rgba(0,0,0,0.75);
+}
 
+.post-it .close {
+    position: absolute;
+    right: 5px;
+    top: 5px;
+    color: red;
+    font-weight: bold;
+    cursor: pointer;
 }
 
 form {
