--- a/Exercices/notes/sass/styles.scss
+++ b/Exercices/notes/sass/styles.scss
@@ -20,7 +20,8 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
-
+        display:none;
+        
         #container {
             background-color: white;
             padding: 10px;
