Google maps formulaire marker

--- a/Exercices/Maps/sass/styles.scss
+++ b/Exercices/Maps/sass/styles.scss
@@ -11,4 +11,11 @@ body {
 	#infos {
 		width: 30%;
 	}
+
+	label {
+		display: block;
+		display: flex;
+		justify-content: space-between;
+		width: 250px;
+	}
 }
