--- a/NODEJS/Cours/views/home.ejs
+++ b/NODEJS/Cours/views/home.ejs
@@ -2,5 +2,6 @@
 
     <h1> <%= content %> </h1>
     <h2> Vous êtes <%= user %> </h2>
+    <a href="/livres"> Voir les livres </a>
 
 <%- include("footer") %>
